--- a/corporate-src/css/style.css
+++ b/corporate-src/css/style.css
@@ -1,1 +1,187 @@
+:root{
+	--black-color: #000;
+	--white-color: #fff;
+	--text-color: #49586e;
+	--theme-green-color: #15ad9a;
+	--primary-font: 'Montserrat', sans-serif;
+	--secondary-font: 'PT Serif', serif;
+	--tertiary-font: 'Kalam', cursive;
+}
+body{margin: 0;padding: 0;}
 
+.section-titles{margin-bottom: 25px;}
+.section-titles h1{font-family: var(--secondary-font);color: var(--black-color);font-size: 32px;font-weight: 600;}
+.section-titles h2{font-family: var(--secondary-font);color: var(--black-color);font-size: 28px;font-weight: 600;}
+.section-titles p{font-family: var(--primary-font);color: var(--text-color);}
+
+.categories-boxes{font-family: var(--primary-font);}
+.categories-boxes ul{width: 100%;list-style: none;padding-left: 0;margin-left: 0;display: inline-flex;border: 1px solid #e2e8f0;border-radius: 15px;white-space: nowrap;overflow: auto;}
+.categories-boxes ul li{text-align: center;padding: 12px 5px 16px;border-right: 1px solid #e2e8f0;}
+.categories-boxes ul li:last-child{border-right: none;}
+.categories-boxes ul li a{text-decoration: none;text-align: center;display: inline-block;width: 154px;cursor: pointer;}
+.categories-boxes ul li a img{width: 60px;padding: 0px;background-color: var(--theme-green-color);border-radius: 50%;margin-bottom: 10px;}
+.categories-boxes ul li a p{color: var(--text-color);margin-bottom: 0;font-size: 13px;}
+
+
+.corporatebannersilders{width: 100%;margin-bottom: 30px;}
+#corporatebannersilders .item{text-align: center;margin: 5px;}
+.customNavigation{width:100%; margin:0 auto; text-align:center; cursor:pointer;}
+.main-banner-slides{width: 100%;border-radius: 15px;}
+.main-banner-slides img{width: 100%;border-radius: 15px;}
+.owl-theme .owl-controls{margin-top: 0 !important;}
+.owl-pagination{}
+.owl-pagination .owl-page span{width: 20px !important;height: 3px !important;}
+.owl-pagination .owl-page .active{}
+
+
+.categoriecircles{width: 100%;margin-bottom: 30px;}
+#categoriecirclesilders .item{text-align: center;margin: 5px;}
+.categorie-circle-slides{}
+.categorie-circle-slides a{text-decoration: none;font-family: var(--primary-font);color: var(--text-color);font-size: 15px;}
+.categorie-circle-slides a:hover{color: var(--text-color);}
+.categorie-circle-slides img{border-radius: 50%; margin-bottom: 10px;}
+.categorie-circle-slides p{}
+
+.cust-cols-category{background: var(--white-color);border: 1px solid #cbd5e1;border-radius: 15px;margin-bottom: 20px;}
+.cust-cols-category a{text-align: center;text-decoration: none;display: block;width: 100%;}
+.cust-cols-category a img{width: 100%;border-radius: 15px 15px 0px 0px;}
+.cust-cols-category a h3{font-family: var(--secondary-font);color: var(--text-color);font-size: 20px;padding: 10px 0px;margin-bottom: 0;}
+
+
+.gift-banners-lists{width: 100%;text-align: center;margin-bottom: 20px;}
+.gift-banners-lists a{text-decoration: none;}
+.gift-banners-lists a img{width: 100%;border-radius: 15px;}
+
+.gift-banners-lists-desktop{display: block;}
+.gift-banners-lists-mobile{display: none;}
+
+
+.cus-sliders-boxes{margin-bottom: 30px}
+.cus-sliders-boxes ul{display: inline-flex;list-style: none;white-space: nowrap;overflow: auto;width: 100%;padding-left: 0;margin-left: 0;}
+.cus-sliders-boxes ul li{margin: 0px 15px 0px 0px;}
+.cus-sliders-boxes ul li:last-child{margin: 0px 0px 0px 0px;}
+.cus-sliders-boxes ul li a{text-align: center;font-family: var(--primary-font);text-decoration: none;color: var(--text-color);background: var(--white-color);border-radius: 2px;box-shadow: 0 2px 8px 0 rgb(0 0 0 / 8%);display: block;}
+.cus-sliders-boxes ul li a:hover{color: var(--text-color);}
+.cus-sliders-boxes ul li a img{margin-bottom: 5px;width: 100%;}
+.cus-sliders-boxes ul li a span{display: block;padding: 5px 0px;margin-bottom: 5px;font-size: 15px;}
+
+
+
+.cus-sliders-boxes-circle{margin-bottom: 30px}
+.cus-sliders-boxes-circle ul{display: inline-flex;list-style: none;white-space: nowrap;overflow: auto;width: 100%;padding-left: 0;margin-left: 0;}
+.cus-sliders-boxes-circle ul li{margin: 0px 40px 0px 0px;}
+.cus-sliders-boxes-circle ul li:last-child{margin: 0px 0px 0px 0px;}
+.cus-sliders-boxes-circle ul li a{text-align: center;margin: 0 auto; font-family: var(--primary-font);text-decoration: none;color: var(--text-color);background: var(--white-color);display: table;}
+.cus-sliders-boxes-circle ul li a:hover{color: var(--text-color);}
+.cus-sliders-boxes-circle ul li a img{margin-bottom: 5px;width: 100px;border-radius: 50%;text-align: center;margin: 0 auto;}
+.cus-sliders-boxes-circle ul li a span{display: block;padding: 5px 0px;margin-bottom: 5px;font-size: 15px;}
+
+.accessories-rows{width: 100%;display: inline-flex;white-space: nowrap;overflow: auto;margin-bottom: 30px;}
+.accessories-col{margin: 0px 20px 0px 0px;width: 300px;display: block;}
+.accessories-col:last-child{margin: 0px 0px 0px 0px;}
+.accessories-col a{width: 100%;text-decoration: none;border-radius: 8px;border: 1px solid #e2e8f0;display: inline-block;background: var(--white-color);}
+.accessories-col-imgs{width: 100%;margin-bottom: 10px;}
+.accessories-col-imgs img{width: 100%;border-radius: 8px 8px 0px 0px;}
+.accessories-col-infos{font-family: var(--primary-font);padding: 1px 10px 1px 10px;}
+.accessories-col-infos h4{color: var(--black-color);font-size: 18px;margin-bottom: 2px;}
+.accessories-col-infos p{color: var(--text-color);font-size: 14px;margin-bottom: 2px;font-style: italic;}
+
+.accessories-offers-box{width: 100%;margin-bottom: 30px;}
+.accessories-offers-box a{display: inline-block;width: 100%;}
+.accessories-offers-box a img{width: 100%;border: 1px solid #f1f5f9;}
+.accessories-offers-box .border-left{border-radius: 15px 0px 0px 15px;}
+.accessories-offers-box .border-right{border-radius: 0px 15px 15px 0px;}
+
+.section-custom-title{width: 100%;margin-bottom: 20px;border-bottom: 1px solid var(--black-color);}
+
+.section-custom-title h4{font-family: var(--primary-font);color: var(--black-color);font-size: 18px;text-transform: uppercase;font-weight: 600;}
+.section-custom-title h4 span{float: right;}
+.section-custom-title h4 span a{text-decoration: none;color: var(--text-color);font-size: 14px;text-transform: capitalize;}
+
+.same-delivery-boxes{width: 100%;margin-bottom: 20px;position: relative;}
+.same-delivery-boxes a{width: 100%;text-decoration: none;text-align: center;display: inline-block;position: relative;}
+.same-delivery-boxes a img{width: 100%;text-align: center;border-radius: 10px;}
+.same-delivery-boxes a p{font-family: var(--primary-font);color: var(--white-color);position: absolute;bottom: 10px;width: 100%;margin-bottom: 0;font-size: 20px;text-transform: uppercase;}
+
+
+.section-titles-borders{font-family: var(--primary-font);text-align: center;}
+.section-titles-borders h2{color: var(--text-color);}
+.section-titles-borders p{color: var(--text-color);}
+
+.brands-logos{margin-bottom: 20px;}
+.brands-logos img{width: 100%;}
+
+.testimonals-section{width: 100%;padding: 20px 0px;background: linear-gradient(to bottom left,#15ad9a,#15ad9a78);}
+.section-titles-white{}
+.section-titles-white h2{color: var(--white-color);font-family: var(--secondary-font);margin-bottom: 1px;}
+.section-titles-white p{color: var(--white-color);font-family: var(--primary-font);font-size: 14px;}
+.testimonalssliders-section{width: 100%;position: relative;}
+#testimonalssliders .item{text-align: center;margin: 5px;}
+.testimonalslidebox{border: 1px solid var(--white-color);border-radius: 10px;padding: 5px;}
+.testimonalslideinnerbox{text-align: center;background: var(--white-color);border-radius: 10px;padding: 20px 15px 15px 15px;}
+.testimonalsthumb{margin-bottom: 10px;}
+.testimonalsthumb img{border: 1px solid #cbd5e1;border-radius: 10px;padding: 5px;width: 60px;}
+.stars-list{font-family: var(--primary-font);color: var(--text-color);}
+.stars-list img{}
+.stars-list span{font-size: 12px;}
+.top-quotes{text-align: left;}
+.top-quotes img{}
+.testimonals-contents{color: var(--text-color);}
+.testimonals-contents p{font-family: var(--tertiary-font);margin-bottom: 1px;font-size: 16px;}
+.testimonals-contents span{font-family: var(--primary-font);font-size: 12px;}
+.bottom-quotes{text-align: right;}
+.bottom-quotes img{}
+
+.testimonalssliderscustomNavigation{width:100%; margin:0 auto; text-align:center; cursor:pointer;position: absolute;top: 40%;}
+.testimonalssliderscustomNavigation .btn{position: absolute;background: var(--white-color);color: var(--text-color);font-size: 40px;line-height: 1;width: 50px;height: 50px;padding: 2px;border-radius: 50%;box-shadow: 0 2px 8px 0 rgb(0 0 0 / 20%);}
+.testimonalssliderscustomNavigation .prev{left: 0;}
+.testimonalssliderscustomNavigation .next{right: 0;}
+
+.section-contents{width: 100%;padding: 30px 0px;font-family: var(--primary-font);margin-bottom: 0px;}
+.section-contents h2{color: var(--black-color);font-size: 20px;}
+.section-contents p{color: var(--text-color);font-size: 15px;}
+#more {display: none;}
+#myBtn{border: none;outline: none;color: var(--theme-green-color);padding: 0;background: var(--white-color);}
+#scroll {position:fixed;right:50px;bottom:50px;cursor:pointer;width:50px;height:50px;background-color:var(--white-color);box-shadow: 0 2px 8px 0 rgb(0 0 0 / 20%);display:none;border-radius: 50%;}
+#scroll span {}
+#scroll span i{position:absolute;top:30%;left:50%;margin-left:-12px; margin-top:-12px;height:0;width:0;color: var(--text-color);font-size: 40px;}
+
+/*#myBtns{display: none;}*/
+#myBtns{cursor: pointer;border: none;outline: none;background: var(--theme-green-color);border-radius: 50%;width: 55px;height: 55px;padding: 0px 9px 0px 9px;position: fixed;left: 5px;bottom: 50px;}
+#myBtns img{width: 30px;}
+.modal{display: none;position: fixed;z-index: 1;padding-top: 100px;left: 0;top: 0;width: 100%;height: 100%;overflow: auto;background-color: rgb(0,0,0);background-color: rgba(0,0,0,0.4);}
+.modal-content{background-color: #fefefe;margin: auto;padding: 20px;border: 1px solid #888;width: 40% !important;}
+.close{color: var(--black-color);float: right;font-size: 28px;font-weight: bold;text-align: right;}
+.close:hover,.close:focus{color: #000;text-decoration: none;cursor: pointer;}
+.footer-form{display: none;}
+.footer-form{background: #e6e6e6;padding: 10px 0px;width: 100%;position: fixed;bottom: 0;z-index: 999999;}
+.footer-form form .row{align-items: center;}
+.footer-form-fileds{font-family: var(--primary-font);margin-bottom: 20px;}
+.footer-form-fileds h2{color: var(--black-color);margin-bottom: 0;font-size: 20px;text-transform: uppercase;text-align: center;}
+.footer-form-fileds input{color: var(--text-color);width: 100%;outline: none;border: none;border: 1px solid var(--text-color);background: var(--white-color);border-radius: 4px;padding: 2px 8px 0px 8px;}
+.footer-form-fileds input::placeholder{color: var(--text-color);opacity: 0.9;}
+.footer-form-fileds button{background: var(--theme-green-color);color: var(--white-color);padding: 2px 8px 0px 8px;text-align: center;outline: none;border: none;border-radius: 4px;width: 100%;}
+
+
+@media only screen and (max-width: 1400px){
+	.cus-sliders-boxes ul li a{width: 150px;}
+	.cus-sliders-boxes-circle ul li a{width: 100px;}
+}
+@media only screen and (max-width: 800px){
+	.gift-banners-lists-desktop{display: none;}
+	.gift-banners-lists-mobile{display: block;}
+	.accessories-col a{width: 300px;}
+	.footer-form{display: none;}
+	#myBtns{display: block;}
+	.section-contents{margin-bottom: 0;}
+	/*.footer-form-fileds h2{text-transform: uppercase;text-align: center;}
+	.footer-form-fileds input{background: var(--white-color);border: 1px solid var(--text-color);color: var(--text-color);}
+	.footer-form-fileds input::placeholder{color: var(--text-color);}
+	.footer-form-fileds{margin-bottom: 20px;}*/
+	.modal-content{width: 90% !important;}
+}
+
+@media only screen and (max-width: 600px){
+	.col-cus-half{width: 50% !important;float: left;}
+	#scroll{right: 10px;}
+}
